--- a/windi.css
+++ b/windi.css
@@ -96,17 +96,17 @@ html {
   font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   line-height: 1.5;
 }
+h1 {
+  margin: 0;
+  font-size: inherit;
+  font-weight: inherit;
+}
 hr {
   height: 0;
   color: inherit;
   border-top-width: 1px;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-size: inherit;
-  font-weight: inherit;
-}
-h1 {
-  margin: 0;
   font-size: inherit;
   font-weight: inherit;
 }
@@ -201,91 +201,53 @@ textarea::-ms-input-placeholder {
   opacity: 1;
   color: #9ca3af;
 }
-.container {
-  width: 100%;
-}
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-}
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
-}
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-}
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
-.bg-light-50 {
+.bg-gray-50 {
   --tw-bg-opacity: 1;
-  background-color: rgba(253, 253, 253, var(--tw-bg-opacity));
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.bg-light-200 {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgba(250, 250, 250, var(--tw-bg-opacity));
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-light-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(242, 242, 242, var(--tw-bg-opacity));
+.border-light-900 {
+  --tw-border-opacity: 1;
+  border-color: rgba(221, 225, 227, var(--tw-border-opacity));
 }
-.bg-light-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(241, 243, 245, var(--tw-bg-opacity));
+.border-light-blue-600 {
+  --tw-border-opacity: 1;
+  border-color: rgba(2, 132, 199, var(--tw-border-opacity));
 }
-.bg-light-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(222, 226, 230, var(--tw-bg-opacity));
+.border-light-blue-800 {
+  --tw-border-opacity: 1;
+  border-color: rgba(7, 89, 133, var(--tw-border-opacity));
 }
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(153, 27, 27, var(--tw-bg-opacity));
-}
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+.rounded-md {
+  border-radius: 0.375rem;
 }
 .rounded-lg {
   border-radius: 0.5rem;
 }
-.rounded-t-lg {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
+.rounded-2xl {
+  border-radius: 1rem;
 }
-.cursor-pointer {
-  cursor: pointer;
+.rounded {
+  border-radius: 0.25rem;
+}
+.border {
+  border-width: 1px;
+}
+.border-2 {
+  border-width: 2px;
+}
+.border-1 {
+  border-width: 1px;
+}
+.border-6 {
+  border-width: 6px;
 }
 .flex {
   display: -webkit-box;
@@ -307,223 +269,51 @@ textarea::-ms-input-placeholder {
   -webkit-flex-direction: column;
   flex-direction: column;
 }
-.items-center {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.self-center {
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  -webkit-align-self: center;
-  align-self: center;
-}
 .justify-center {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center;
 }
+.justify-between {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.font-sans {
+  font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+.font-serif {
+  font-family: ui-serif,Georgia,Cambria,"Times New Roman",Times,serif;
+}
 .font-bold {
   font-weight: 700;
 }
-.font-normal {
-  font-weight: 400;
-}
-.font-light {
-  font-weight: 300;
-}
-.h-screen {
-  height: 100vh;
-}
-.h-full {
-  height: 100%;
-}
-.h-100 {
-  height: 25rem;
-}
 .h-200 {
   height: 50rem;
-}
-.h-400 {
-  height: 100rem;
 }
 .text-8xl {
   font-size: 6rem;
   line-height: 1;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.m-10 {
+  margin: 2.5rem;
 }
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.m-2 {
+  margin: 0.5rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.leading-loose {
-  line-height: 2;
-}
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.pt-4 {
-  padding-top: 1rem;
-}
-.pb-1 {
-  padding-bottom: 0.25rem;
-}
-.pt-1 {
-  padding-top: 0.25rem;
-}
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0/0.1),0 1px 2px -1px rgb(0 0 0/0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
-  -webkit-box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
-  box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
-}
-.text-center {
-  text-align: center;
-}
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgba(31, 41, 55, var(--tw-text-opacity));
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-.text-light-200 {
-  --tw-text-opacity: 1;
-  color: rgba(250, 250, 250, var(--tw-text-opacity));
-}
-.text-light-blue-200 {
-  --tw-text-opacity: 1;
-  color: rgba(186, 230, 253, var(--tw-text-opacity));
+.stroke-light-900 {
+  --tw-stroke-opacity: 1;
+  stroke: rgba(221, 225, 227, var(--tw-stroke-opacity));
 }
 .text-sky-100 {
   --tw-text-opacity: 1;
   color: rgba(224, 242, 254, var(--tw-text-opacity));
 }
-.text-size-\$forever-and-ever {
-  color: var(--forever-and-ever);
-}
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
-.tracking-wider {
-  letter-spacing: 0.05em;
-}
 .align-middle {
   vertical-align: middle;
 }
-.w-full {
-  width: 100%;
-}
-.w-100 {
-  width: 25rem;
-}
-@media (min-width: 1024px) {
-  .lg\:rounded-l-lg {
-    border-top-left-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
-  }
-  .lg\:rounded-tr-none {
-    border-top-right-radius: 0px;
-  }
-  .lg\:flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-  }
-  .lg\:justify-start {
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    -webkit-justify-content: flex-start;
-    justify-content: flex-start;
-  }
-  .lg\:justify-end {
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    -webkit-justify-content: flex-end;
-    justify-content: flex-end;
-  }
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-  .lg\:px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-  .lg\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-  .lg\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .lg\:pt-0 {
-    padding-top: 0px;
-  }
-  .lg\:text-left {
-    text-align: left;
-  }
-  .lg\:w-4\/12 {
-    width: 33.333333%;
-  }
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
+.w-200 {
+  width: 50rem;
 }
