--- a/windi.css
+++ b/windi.css
@@ -201,53 +201,23 @@ textarea::-ms-input-placeholder {
   opacity: 1;
   color: #9ca3af;
 }
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.border-light-900 {
-  --tw-border-opacity: 1;
-  border-color: rgba(221, 225, 227, var(--tw-border-opacity));
-}
-.border-light-blue-600 {
-  --tw-border-opacity: 1;
-  border-color: rgba(2, 132, 199, var(--tw-border-opacity));
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 .border-light-blue-800 {
   --tw-border-opacity: 1;
   border-color: rgba(7, 89, 133, var(--tw-border-opacity));
 }
-.rounded-md {
-  border-radius: 0.375rem;
-}
-.rounded-lg {
-  border-radius: 0.5rem;
-}
 .rounded-2xl {
   border-radius: 1rem;
 }
-.rounded {
-  border-radius: 0.25rem;
-}
-.border {
-  border-width: 1px;
-}
 .border-2 {
   border-width: 2px;
-}
-.border-1 {
-  border-width: 1px;
-}
-.border-6 {
-  border-width: 6px;
 }
 .flex {
   display: -webkit-box;
@@ -284,9 +254,6 @@ textarea::-ms-input-placeholder {
 .font-sans {
   font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
-.font-serif {
-  font-family: ui-serif,Georgia,Cambria,"Times New Roman",Times,serif;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -300,20 +267,14 @@ textarea::-ms-input-placeholder {
 .m-10 {
   margin: 2.5rem;
 }
-.m-2 {
-  margin: 0.5rem;
+.outline-light-blue-800 {
+  --tw-outline-opacity: 1;
+  outline-color: rgba(7, 89, 133, var(--tw-outline-opacity));
 }
-.stroke-light-900 {
-  --tw-stroke-opacity: 1;
-  stroke: rgba(221, 225, 227, var(--tw-stroke-opacity));
+.outline-2 {
+  outline-width: 2px;
 }
 .text-sky-100 {
   --tw-text-opacity: 1;
   color: rgba(224, 242, 254, var(--tw-text-opacity));
-}
-.align-middle {
-  vertical-align: middle;
-}
-.w-200 {
-  width: 50rem;
 }
