--- a/windi.css
+++ b/windi.css
@@ -239,6 +239,12 @@ textarea::-ms-input-placeholder {
   -webkit-flex-direction: column;
   flex-direction: column;
 }
+.items-center {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
 .justify-center {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -277,4 +283,7 @@ textarea::-ms-input-placeholder {
 .text-sky-100 {
   --tw-text-opacity: 1;
   color: rgba(224, 242, 254, var(--tw-text-opacity));
+}
+.align-middle {
+  vertical-align: middle;
 }
