--- a/windi.css
+++ b/windi.css
@@ -216,12 +216,35 @@ textarea::-ms-input-placeholder {
   --tw-bg-opacity: 1;
   background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(185, 28, 28, var(--tw-bg-opacity));
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
+}
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
+}
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+}
 .border-light-blue-800 {
   --tw-border-opacity: 1;
   border-color: rgba(7, 89, 133, var(--tw-border-opacity));
 }
 .rounded-2xl {
   border-radius: 1rem;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 .border-2 {
   border-width: 2px;
@@ -316,6 +339,12 @@ textarea::-ms-input-placeholder {
 .mr-5 {
   margin-right: 1.25rem;
 }
+.ml-2 {
+  margin-left: 0.5rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
 .outline-light-blue-800 {
   --tw-outline-opacity: 1;
   outline-color: rgba(7, 89, 133, var(--tw-outline-opacity));
@@ -360,6 +389,18 @@ textarea::-ms-input-placeholder {
 .text-purple-300 {
   --tw-text-opacity: 1;
   color: rgba(196, 181, 253, var(--tw-text-opacity));
+}
+.text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgba(185, 28, 28, var(--tw-text-opacity));
+}
+.text-light-100 {
+  --tw-text-opacity: 1;
+  color: rgba(252, 252, 252, var(--tw-text-opacity));
+}
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgba(5, 150, 105, var(--tw-text-opacity));
 }
 .align-middle {
   vertical-align: middle;
